--- a/project-files/projects/Navbar-project/index.html
+++ b/project-files/projects/Navbar-project/index.html
@@ -15,7 +15,7 @@
                 <img src="./logo.svg" alt="logo">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </div>
-            <ul class="menu">
+            <ul class="menu">>
                 <li>
                     <a href="#">Home</a>
                 </li>
